Cleaned text spacing for longer language options and fixed the reset bug on cashier and manager screens

--- a/frontend/src/customer/addToOrder/addToOrder.css
+++ b/frontend/src/customer/addToOrder/addToOrder.css
@@ -5,7 +5,7 @@
     cursor: pointer;
     transition: all 0.3s;
     color: #D61927;
-    width: 200px;
+    width: auto;
     font-size: 20px;
     font-weight: bold;
 }
