--- a/frontend/src/customer/myBag/myBag.css
+++ b/frontend/src/customer/myBag/myBag.css
@@ -1,12 +1,12 @@
 .order-more-button, .place-order-button, .clear-cart-button, .remove-combo-button{
     margin: 10px;
-    padding: 10px 0px;
+    padding: 10px;
     background-color: #f8f8f8;
     border-radius: 5px;
     cursor: pointer;
     transition: 0.2s;
     color: #D61927;
-    width: 160px;
+    width: auto;
 }
 
 .order-more-button:hover, .place-order-button:hover, .clear-cart-button:hover, .remove-combo-button:hover, .order-more-button:focus, .place-order-button:focus, .clear-cart-button:focus, .remove-combo-button:focus { 
