--- a/frontend/src/manager/header/pageHeader.css
+++ b/frontend/src/manager/header/pageHeader.css
@@ -7,7 +7,7 @@
 }
 
 .nav-btn {
-    padding: 8px 2px;
+    padding: 15px 20px;
     background-color: #f8f8f8;
     border-radius: 5px;
     cursor: pointer;
@@ -17,11 +17,10 @@
     font-size: 20px;
     font-weight: bold;
 }
-
+    
 .nav-btn-text {
     font-size: 20px;
     color: #D61927;
-    padding: 10px 25px;
 }
 
 .nav-btn:hover, .nav-btn:focus {
